[gd_scene load_steps=33 format=3 uid="uid://ddmydicggypot"]

[ext_resource type="Shader" path="res://ui/scroll.gdshader" id="1"]
[ext_resource type="FontFile" uid="uid://3heiwkvujho0" path="res://ui/fonts/EarlyGameBoySTD.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://st2lqyxx0u6x" path="res://ui/background.png" id="3"]
[ext_resource type="Texture2D" uid="uid://df8hw8q5hoxpk" path="res://ui/panel.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c1r6hwy43w8pn" path="res://scenes/game_plinko/ball.png" id="5"]
[ext_resource type="Texture2D" uid="uid://tdhk2gooh12p" path="res://scenes/game_plinko/peg.png" id="6"]
[ext_resource type="PackedScene" uid="uid://d14rf1d0alf80" path="res://scenes/game_plinko/player.tscn" id="7_rjre5"]
[ext_resource type="Theme" uid="uid://bfmrdx6ah36lt" path="res://ui/ui_theme.tres" id="7_t0i7x"]
[ext_resource type="FontFile" uid="uid://cu56gylq7usm7" path="res://ui/fonts/Minimum.ttf" id="8_m7j13"]
[ext_resource type="Texture2D" uid="uid://c2q4hdkscev71" path="res://scenes/home/ui/stats/currency.png" id="9_qom70"]
[ext_resource type="Script" path="res://scenes/game_plinko/game.gd" id="10"]
[ext_resource type="Texture2D" uid="uid://b2l8td6ax26uf" path="res://scenes/home/ui/stats/fun.png" id="10_m16g1"]
[ext_resource type="FontFile" uid="uid://ymu18ty2r2n8" path="res://ui/fonts/PolygonPixel5x7Standard.ttf" id="11_xqeou"]

[sub_resource type="ShaderMaterial" id="20"]
shader = ExtResource("1")
shader_parameter/speed_x = 1.0
shader_parameter/speed_y = null

[sub_resource type="PhysicsMaterial" id="31"]
friction = 0.5
bounce = 0.3

[sub_resource type="CircleShape2D" id="26"]
radius = 4.3

[sub_resource type="PhysicsMaterial" id="27"]
friction = 0.65
bounce = 0.11

[sub_resource type="SegmentShape2D" id="28"]
b = Vector2(0, 400)

[sub_resource type="CircleShape2D" id="30"]
radius = 4.0

[sub_resource type="PhysicsMaterial" id="32"]
rough = true
bounce = 1.0
absorbent = true

[sub_resource type="RectangleShape2D" id="29"]
size = Vector2(179, 10)

[sub_resource type="RectangleShape2D" id="33"]
size = Vector2(164, 7)

[sub_resource type="Animation" id="Animation_hvg3v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/HelpText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(159, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Results:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(41.5, -72)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/VBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 146)]
}

[sub_resource type="Animation" id="Animation_14ibh"]
resource_name = "Results"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Results:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(41.5, -72), Vector2(41.5, 40)]
}

[sub_resource type="Animation" id="Animation_avwe2"]
resource_name = "Show"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/HelpText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 3.2, 3.8),
"transitions": PackedFloat32Array(0.5, 1, 0.5, 1),
"update": 0,
"values": [Vector2(159, 100), Vector2(0, 100), Vector2(0, 100), Vector2(-161, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/VBoxContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.5, 4),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector2(0, 146), Vector2(0, 146), Vector2(0, 77)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8hpli"]
_data = {
"RESET": SubResource("Animation_hvg3v"),
"Results": SubResource("Animation_14ibh"),
"Show": SubResource("Animation_avwe2")
}

[sub_resource type="LabelSettings" id="LabelSettings_ds61f"]
font = ExtResource("8_m7j13")
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqf8g"]
atlas = ExtResource("10_m16g1")
region = Rect2(0, 0, 6, 6)

[sub_resource type="LabelSettings" id="LabelSettings_ch6bb"]
line_spacing = -1.0
font = ExtResource("11_xqeou")
font_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="19"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 5.0
content_margin_bottom = 4.0
texture = ExtResource("4")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 16, 16)

[sub_resource type="Theme" id="21"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/colors/font_color_shadow = Color(0, 0, 0, 1)
Label/colors/font_outline_modulate = Color(0, 0, 0, 1)
Label/constants/line_spacing = 0
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/fonts/font = SubResource("5")
Label/styles/normal = null
Panel/styles/panel = SubResource("19")
PanelContainer/styles/panel = SubResource("19")

[node name="Plinko" type="Node" groups=["scene"]]
script = ExtResource("10")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("20")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 1

[node name="Ball" type="RigidBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(82, -55)
collision_layer = 5
mass = 0.2
physics_material_override = SubResource("31")
gravity_scale = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("26")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
texture = ExtResource("5")

[node name="Fox" parent="." instance=ExtResource("7_rjre5")]
unique_name_in_owner = true
position = Vector2(81, 144)

[node name="Board" type="StaticBody2D" parent="."]
physics_material_override = SubResource("27")

[node name="Wall2" type="CollisionShape2D" parent="Board"]
position = Vector2(160, -220)
shape = SubResource("28")

[node name="Wall" type="CollisionShape2D" parent="Board"]
position = Vector2(0, -220)
shape = SubResource("28")

[node name="Peg" type="CollisionShape2D" parent="Board"]
position = Vector2(21, 20)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg"]
texture = ExtResource("6")

[node name="Peg2" type="CollisionShape2D" parent="Board"]
position = Vector2(51, 20)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg2"]
texture = ExtResource("6")

[node name="Peg3" type="CollisionShape2D" parent="Board"]
position = Vector2(81, 20)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg3"]
texture = ExtResource("6")

[node name="Peg4" type="CollisionShape2D" parent="Board"]
position = Vector2(111, 20)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg4"]
position = Vector2(1, 1)
texture = ExtResource("6")

[node name="Peg5" type="CollisionShape2D" parent="Board"]
position = Vector2(141, 20)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg5"]
texture = ExtResource("6")

[node name="Peg6" type="CollisionShape2D" parent="Board"]
position = Vector2(21, 95)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg6"]
texture = ExtResource("6")

[node name="Peg7" type="CollisionShape2D" parent="Board"]
position = Vector2(51, 95)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg7"]
texture = ExtResource("6")

[node name="Peg8" type="CollisionShape2D" parent="Board"]
position = Vector2(81, 95)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg8"]
texture = ExtResource("6")

[node name="Peg9" type="CollisionShape2D" parent="Board"]
position = Vector2(111, 95)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg9"]
texture = ExtResource("6")

[node name="Peg10" type="CollisionShape2D" parent="Board"]
position = Vector2(141, 95)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg10"]
texture = ExtResource("6")

[node name="Peg11" type="CollisionShape2D" parent="Board"]
position = Vector2(36, 76)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg11"]
texture = ExtResource("6")

[node name="Peg12" type="CollisionShape2D" parent="Board"]
position = Vector2(66, 76)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg12"]
texture = ExtResource("6")

[node name="Peg13" type="CollisionShape2D" parent="Board"]
position = Vector2(96, 76)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg13"]
texture = ExtResource("6")

[node name="Peg14" type="CollisionShape2D" parent="Board"]
position = Vector2(126, 76)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg14"]
texture = ExtResource("6")

[node name="Peg15" type="CollisionShape2D" parent="Board"]
position = Vector2(36, 40)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg15"]
texture = ExtResource("6")

[node name="Peg16" type="CollisionShape2D" parent="Board"]
position = Vector2(66, 40)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg16"]
texture = ExtResource("6")

[node name="Peg17" type="CollisionShape2D" parent="Board"]
position = Vector2(96, 40)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg17"]
texture = ExtResource("6")

[node name="Peg18" type="CollisionShape2D" parent="Board"]
position = Vector2(126, 40)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg18"]
texture = ExtResource("6")

[node name="Peg19" type="CollisionShape2D" parent="Board"]
position = Vector2(21, 58)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg19"]
texture = ExtResource("6")

[node name="Peg20" type="CollisionShape2D" parent="Board"]
position = Vector2(51, 58)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg20"]
texture = ExtResource("6")

[node name="Peg21" type="CollisionShape2D" parent="Board"]
position = Vector2(81, 58)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg21"]
position = Vector2(1, 1)
texture = ExtResource("6")

[node name="Peg22" type="CollisionShape2D" parent="Board"]
position = Vector2(111, 58)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg22"]
position = Vector2(1, 1)
texture = ExtResource("6")

[node name="Peg23" type="CollisionShape2D" parent="Board"]
position = Vector2(141, 58)
shape = SubResource("30")

[node name="Sprite2D" type="Sprite2D" parent="Board/Peg23"]
position = Vector2(1, 1)
texture = ExtResource("6")

[node name="Floor" type="StaticBody2D" parent="."]
physics_material_override = SubResource("32")

[node name="Floor" type="CollisionShape2D" parent="Floor"]
position = Vector2(82.5, 175)
shape = SubResource("29")

[node name="FloorCatch" type="Area2D" parent="."]
position = Vector2(80, 160)
collision_layer = 2
collision_mask = 4
linear_damp = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorCatch"]
position = Vector2(2, 0)
shape = SubResource("33")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8hpli")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Results" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -144.0
offset_right = 38.5
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_t0i7x")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Results"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Results/VBoxContainer"]
layout_mode = 2
text = "Results"
label_settings = SubResource("LabelSettings_ds61f")
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Control/Results/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="TextureRect" type="TextureRect" parent="Control/Results/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("9_qom70")
stretch_mode = 5

[node name="Currency" type="Label" parent="Control/Results/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "+1000"
label_settings = SubResource("LabelSettings_ds61f")
horizontal_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="Control/Results/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
texture = SubResource("AtlasTexture_sqf8g")
stretch_mode = 5

[node name="Happiness" type="Label" parent="Control/Results/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+100"
label_settings = SubResource("LabelSettings_ds61f")
horizontal_alignment = 1

[node name="HelpText" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 159.0
offset_top = -44.0
offset_right = 159.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("7_t0i7x")

[node name="RichTextLabel" type="Label" parent="Control/HelpText"]
layout_mode = 2
size_flags_vertical = 1
text = "Catch all the balls"
label_settings = SubResource("LabelSettings_ch6bb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Info" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("21")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Info"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Info/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Info/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Balls"

[node name="BallCount" type="Label" parent="Control/Info/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = "00"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Info/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Info/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Caught"

[node name="CatchCount" type="Label" parent="Control/Info/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "00"

[connection signal="body_entered" from="Fox/Bucket/BucketCatch" to="." method="_on_BucketCatch_body_entered"]
[connection signal="body_entered" from="FloorCatch" to="." method="_on_FloorCatch_body_entered"]

[editable path="Fox"]
